backend changes to improve verify email endpoint
